# TomateClock-RPG

./: README.md  main.py  pyproject.toml
docs/tasks/: TSK-01.md  TSK-02.md
resources/qml/: main.qml
smartworkmate/: __init__.py  cli.py
tests/: test_backend.py  test_bridge_manual_time.py
tomateclock/: __init__.py  backend.py
