[project]
name = "tomateclock-rpg"
version = "0.1.0"
description = "Pomodoro app with title progression"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.7.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
